@@ -10,7 +10,7 @@ import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Primary;
 import org.springframework.context.annotation.Profile;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.concurrent.TimeUnit;
 
 @Configuration
@@ -24,7 +24,7 @@ public class LokalCacheConfig {
     @Profile({"nais", "local"})
     CacheManager cacheManager() {
         SimpleCacheManager manager = new SimpleCacheManager();
-        manager.setCaches(Arrays.asList(
+        manager.setCaches(List.of(
                 new CaffeineCache(AZURE_CACHE, Caffeine.newBuilder()
                         .expireAfterWrite(50, TimeUnit.MINUTES)
                         .maximumSize(10)
